--- a/report/template.sty
+++ b/report/template.sty
@@ -17,6 +17,7 @@
 \usepackage[backend=biber]{biblatex}
 \addbibresource{references.bib}
 \usepackage{datetime}
+\usepackage{xcolor}
 
 % listings settings for bash
 \lstset{
@@ -37,7 +38,7 @@
 	language=java,
 	tabsize=4,
 	showstringspaces=false,
-	commentstyle=\color{green},
+	commentstyle=\color{gray},
 	keywordstyle=\color{blue},
 	stringstyle=\color{red},
 	rulecolor=\color{black},
